# openenv-task-simulation

./: .gitignore  Dockerfile  OpenEnv.code-workspace  README.md  app.py  client.py  config.py  core.py  enhanced_graders.py  inference.py  main.py  metrics.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
configs/: openenv.yaml
k8s/: deploy.yaml
models/: __init__.py  database.py
openenv/: core.py  models.py  tasks.py
professional_coding_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: baseline.py  validate.py
server/: app.py  enhanced_api.py  environment.py
tests/: test_zk_snark.py
